--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <ul>
                             <li>
                                 <label for ='filter'>Enter Date</label>
-                                <input name = 'filter' id = 'datetime' placeholder ='01/01/2010' type = text>
+                                <input name = 'filter' id = 'datetime' placeholder ='1/1/2010' type = text>
                             </li>
                         
                         </ul>
@@ -89,7 +89,13 @@
                 <div class='col-md-8'>
                     <table class='table table-striped'>
                         <thead>
-                        
+                            <th>datetime</th>
+                            <th>city</th>
+                            <th>state</th>
+                            <th>country</th>
+                            <th>shape</th>
+                            <th>duration</th>
+                            <th>comment</th>
                         </thead>
                         <tbody>
                         </tbody>
